@@ -1,39 +1,61 @@
 package org.xonely.repository.gson;
 
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
+import com.google.gson.*;
 import org.xonely.model.Label;
 import org.xonely.repository.LabelRepo;
 
 import java.io.*;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Stream;
+import java.util.*;
+import java.util.stream.*;
 
 import static org.xonely.model.Status.DELETED;
 
 public class GsonLabelRepoImpl implements LabelRepo {
-    private List<Label> labels;
-    private  String path = "labels.json";
-    private  Gson gson = new GsonBuilder().setPrettyPrinting().create();
-    public GsonLabelRepoImpl() {
-        File file = new File(path);
-    }
+    private List<Label> labelList;
+    private final String path = "labels.json";
+    private final Gson gson = new GsonBuilder().setPrettyPrinting().create();
+
     @Override
     public List<Label> getAll() {
-
         try (InputStream is = new FileInputStream(path); Reader reader = new InputStreamReader(is)) {
-            labels = Stream.of(gson.fromJson(reader, Label[].class)).distinct().toList();
-            if (labels == null) {
-                return new ArrayList<>();
-            } else {
-                return labels;
-            }
-        } catch (IOException e) {
+            return Stream.of(gson.fromJson(reader, org.xonely.model.Label[].class)).distinct().collect(Collectors.toList());
+        } catch (NullPointerException | IOException e) {
+            return new ArrayList<>();
+        }
+    }
+
+
+    @Override
+    public Label save(Label label) {
+        labelList = getAll();
+
+        try (OutputStream os = new FileOutputStream(path, false); java.io.Writer wr = new OutputStreamWriter(os)) {
+
+            labelList.add(label);
+            String json = gson.toJson(labelList);
+            wr.write(json);
+            return label;
+
+        } catch (Exception e) {
             e.printStackTrace();
             return null;
-        }catch(NullPointerException e){
-            return new ArrayList<>();
+        }
+    }
+
+    @Override
+    public Label update(Label label) {
+        labelList = getAll();
+        try (OutputStream os = new FileOutputStream(path, false); Writer wr = new OutputStreamWriter(os)) {
+
+            int index = labelList.indexOf(label);
+            labelList.set(index, label);
+            String json = gson.toJson(labelList);
+            wr.write(json);
+            System.out.println(label);
+            return label;
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
         }
     }
 
@@ -43,40 +65,10 @@ public class GsonLabelRepoImpl implements LabelRepo {
     }
 
     @Override
-    public Label save(Label label) {
-        try (OutputStream os = new FileOutputStream(path, false); Writer wr = new OutputStreamWriter(os)) {
-            labels = getAll();
-            if (labels.stream().noneMatch(streamW -> streamW.equals(label))) {
-                labels.add(label);
-                String json = gson.toJson(labels);
-                wr.write(json);
-            } else {
-                System.err.println("Такой тэг уже существует");
-            }
-            return label;
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
-    }
-
-    @Override
-    public Label update(Label label) {
-        try (OutputStream os = new FileOutputStream(path, false); Writer wr = new OutputStreamWriter(os)) {
-            labels = getAll();
-            int index = labels.indexOf(label);
-            labels.set(index, label);
-            String json = gson.toJson(labels);
-            wr.write(json);
-            return label;
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
-    }
-
-    @Override
     public void deleteById(Integer id) {
-        labels.get(id).setStatus(DELETED);
+        Label label = getById(id);
+        label.setStatus(DELETED);
+        update(label);
+
     }
 }
