@@ -5,68 +5,33 @@ import org.xonely.model.Writer;
 import org.xonely.repository.WriterRepo;
 
 import java.io.*;
-import java.util.ArrayList;
-import java.util.List;
-
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.*;
+import java.util.stream.*;
 
 import static org.xonely.model.Status.DELETED;
 
 
 public class GsonWriterRepoImpl implements WriterRepo {
-    private List<Writer> writers = new ArrayList<>();
-    private  String path = "writers.json";
-    private  Gson gson = new Gson();
-
+    List<Writer> writerList;
+    private final String path = "writers.json";
+    private final Gson gson = new Gson();
 
     @Override
     public List<Writer> getAll() {
-
         try (InputStream is = new FileInputStream(path); Reader reader = new InputStreamReader(is)) {
-            writers.addAll(Stream.of(gson.fromJson(reader, Writer[].class)).toList());
-                return writers;
-
-        } catch (IOException e) {
-            e.printStackTrace();
-            return null;//////////////////////
-        }
-        catch (NullPointerException e){
+            return Stream.of(gson.fromJson(reader, Writer[].class)).distinct().collect(Collectors.toList());
+        } catch (NullPointerException | IOException e) {
             return new ArrayList<>();
         }
     }
 
     @Override
-    public Writer getById(Integer id) {
-        return getAll().get(id);
-    }
-
-    @Override
     public Writer save(Writer writer) {
-        try (OutputStream os = new FileOutputStream(path, false); java.io.Writer wr = new OutputStreamWriter(os)) {
-            writers = getAll();
-            writers.stream().forEach(System.out::println);
-            if (writers.stream().noneMatch(streamW -> streamW.equals(writer))) {
-                writers.add(writer);
-                String json = gson.toJson(writers);
-                wr.write(json);
-            } else {
-                System.err.println("Такой автор уже существует");
-            }
-            return writer;
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
-    }
+        writerList = getAll();
 
-    @Override
-    public Writer update(Writer writer) {
         try (OutputStream os = new FileOutputStream(path, false); java.io.Writer wr = new OutputStreamWriter(os)) {
-            writers.addAll(getAll());
-            int index = writers.indexOf(writer);
-            writers.set(index, writer);
-            String json = gson.toJson(writers);
+            writerList.add(writer);
+            String json = gson.toJson(writerList);
             wr.write(json);
             return writer;
         } catch (Exception e) {
@@ -76,8 +41,31 @@ public class GsonWriterRepoImpl implements WriterRepo {
     }
 
     @Override
-    public void deleteById(Integer id) {
-        writers.get(id).setStatus(DELETED);
+    public Writer update(Writer writer) {
+        writerList = getAll();
+        try (OutputStream os = new FileOutputStream(path, false); java.io.Writer wr = new OutputStreamWriter(os)) {
+            writerList.addAll(getAll());
+            int index = writerList.indexOf(writer);
+            writerList.set(index, writer);
+            String json = gson.toJson(writerList);
+            wr.write(json);
+            return writer;
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
     }
 
+    @Override
+    public Writer getById(Integer id) {
+        return getAll().get(id);
+    }
+
+    @Override
+    public void deleteById(Integer id) {
+        Writer writer = getById(id);
+        writer.setStatus(DELETED);
+        update(writer);
+
+    }
 }
